# SDLCMakeTemplate

./: .gitmodules  CMakeLists.txt  README.md  setsdl2dll.bat
app/: CMakeLists.txt  main.cc
loadingAnImage/: CMakeLists.txt  main.cc
